# Phoenix

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
ex/: triangle.h
lib/include/lol/: lol.h
lib/include/ltl/: ltl.h  strong_type.h
phoenix/: PhoenixWindow.cpp  PhoenixWindow.h  SDL_Initializer.cpp  SDL_Initializer.h  constant.h
phoenix/Pass/DepthPass/: DepthSubpass.cpp  DepthSubpass.h
phoenix/Pass/GBuffer/: GBufferOutputSubpass.cpp  GBufferOutputSubpass.h  GBufferRenderPass.cpp  GBufferRenderPass.h
phoenix/Pass/Presentation/: PresentationRenderPass.cpp  PresentationRenderPass.h  PresentationSubpass.cpp  PresentationSubpass.h
phoenix/Pass/SceneGraphPass/: SceneGraphPass.cpp  SceneGraphPass.h
phoenix/Pass/SkyPass/: SkyInformation.h  SkyPass.cpp  SkyPass.h
phoenix/SceneGraph/: ModelImporter.cpp  ModelImporter.h  SceneGraph.cpp  SceneGraph.h
phoenix/SceneGraph/DrawInformations/: DrawInformations.h  DrawInformationsAllocator.cpp  DrawInformationsAllocator.h
phoenix/SceneGraph/Materials/: AbstractMaterial.cpp  AbstractMaterial.h  BufferedMaterial.h  BufferedMaterialManager.h  ColoredLambertianMaterial.cpp  ColoredLambertianMaterial.h  Material.h  MaterialFactory.cpp  MaterialFactory.h  TexturedLambertianMaterial.cpp  TexturedLambertianMaterial.h  TexturedMaterial.h  TexturedMaterialManager.h
phoenix/SceneGraph/Nodes/: AbstractNode.h  ActivableNode.cpp  ActivableNode.h  GeometryNode.cpp  GeometryNode.h  GroupNode.cpp  GroupNode.h  Node.h  TransformationNode.cpp  TransformationNode.h
phoenix/SceneGraph/Visitors/: GetDrawBatchesVisitor.cpp  GetDrawBatchesVisitor.h  ListResultVisitor.h  NodeVisitor.h  OneResultVisitor.h  TypedVisitor.h  WithResultVisitor.h
phoenix/shaders/DepthPass/: DepthPass.frag  DepthPass.vert
phoenix/shaders/GBufferPass/: GBufferLambertianColored.frag  GBufferLambertianTexture.frag  GBufferOutput.vert
phoenix/shaders/PresentationPass/: PresentationPass.frag  PresentationPass.vert
phoenix/shaders/SkyPass/: SkyPass.frag  SkyPass.vert
phoenix/shaders/TriangleTest/: triangle.frag  triangle.vert
phoenix/vkw/: Barriers.cpp  Barriers.h  CommandBufferWrapper.h  CommandPool.cpp  CommandPool.h  Device.cpp  Device.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  GraphicPipeline.h  Image.h  ImageView.h  Instance.cpp  Instance.h  MemoryTransfer.h  PipelineLayout.h  Queue.cpp  Queue.h  RenderPass.h  RenderPassWrapper.h  SampledImage.h  Sampler.cpp  Sampler.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderModule.h  Subpass.h  SubpassBuilder.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  TemplatedGraphicPipeline.h  Vertex.h  VulkanResource.h  utility.cpp  utility.h  vulkan.h  (+1 more)
phoenix/vkw/Allocator/: Allocator.cpp  Allocator.h  AllocatorBlock.h
phoenix/vkw/Buffer/: Buffer.h  BufferInfo.h  BufferList.h  BufferManager.h  BufferRef.h
phoenix/vkw/Descriptor/: DescriptorBinding.h  DescriptorPool.h  DescriptorPoolList.h  DescriptorPoolManager.cpp  DescriptorPoolManager.h  DescriptorSet.h  DescriptorSetLayout.h  TemplatedDescriptorPool.h
phoenix/vkw/Image/: Image.h  ImageLoader.h  ImageView.h  SampledImage.h  Sampler.cpp  Sampler.h
phoenix/vkw/RenderPass/: RenderPass.h  RenderPassWrapper.h  Subpass.h  SubpassBuilder.h
phoenix/vkw/With_Pipeline/: WithBuffer.h  WithDynamicStates.h  WithOutputs.h  WithScissors.h  WithShaders.h  WithViewports.h
